# reminders_django

./: README.md  TODO.md  pyproject.toml
.github/workflows/: run-unit-tests.yml
reminders/: manage.py  wsgi.py
reminders/reminders/: asgi.py  settings.py  urls.py
reminders/reminders/settings/: base.py  production.py
reminders/settings/: base.py
reminders/static/css/: style.css
reminders/static/todolist/css/: style.css
reminders/templates/: blank.html
reminders/templates/registration/: logged_out.html  login.html
reminders/templates/todolist/: blank.html  todo_confirm_delete.html  todo_form.html  todo_list.html
reminders/todolist/: forms.py  models.py  tests.py  urls.py  views.py
reminders/todolist/migrations/: 0001_initial.py  0002_alter_todoitem_options_todoitem_priority_and_more.py
static/css/: style.css
templates/registration/: logged_out.html  login.html
templates/todolist/: todo_confirm_delete.html  todo_form.html  todo_list.html
todolist/: admin.py  models.py  views.py
todolist/migrations/: 0001_initial.py
